--- a/TaskPiority/src/index.css
+++ b/TaskPiority/src/index.css
@@ -12,5 +12,5 @@ body{
   --color-secundario: #ffffff;
   --color-fondo: #a8c3e8 ;
   --t-principal:#232948;
-  --t-seacundaro:#a8c3e8;
+  --t-secundaro:#a8c3e8;
 }
